# sudoku2svg

./: .gitignore  LICENCE  README.md  pyproject.toml  setup.py
doc/: Sudoku_4x4_svg.ipynb  usage_example.ipynb
src/sudoku2svg/: __init__.py  sudoku_grid.py  svg_render.py  viewable_sudoku_grid.py
src/sudoku2svg/templates/: sudoku-cell.svg.jinja  sudoku-grid-lines.svg.jinja  sudoku-grid.css  sudoku-grid.svg.jinja
