[project]
name = "sudoku2svg"
version = "0.0.1"
authors = [
  { name="Roi Rodriguez Mendez", email="roi.rodriguez.mendez@gmail.com" },
]
description = "Produces a svg from a sudoku grid, with corner / center marks and coloring support."
readme = "README.md"
keywords = ["sudoku"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jinja2"
]

[project.urls]
"Homepage" = "https://github.com/roirodriguez/sudoku2svg"
"Bug Tracker" = "https://github.com/roirodriguez/sudoku2svg/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"